--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,26 +1,73 @@
 {
-  "name": "MemoMed AI — Контроль приёма лекарств",
-  "short_name": "MemoMed AI",
-  "description": "AI-ассистент для контроля приёма лекарств",
+  "name": "MemoMed AI",
+  "short_name": "MemoMed",
+  "description": "Умный помощник для контроля приёма лекарств",
   "start_url": "/dashboard",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#7e57c2",
-  "orientation": "portrait",
+  "orientation": "portrait-primary",
+  "lang": "ru",
+  "categories": ["health", "medical"],
   "icons": [
     {
-      "src": "/icons/icon-192.png",
+      "src": "/icons/icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icons/icon-512.png",
+      "src": "/icons/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
     }
   ],
-  "categories": ["health", "medical"],
-  "lang": "ru"
+  "shortcuts": [
+    {
+      "name": "Принять лекарство",
+      "short_name": "Принять",
+      "description": "Открыть главный экран для приёма лекарства",
+      "url": "/dashboard",
+      "icons": [{ "src": "/icons/icon-96x96.png", "sizes": "96x96" }]
+    }
+  ],
+  "screenshots": [],
+  "prefer_related_applications": false
 }
