feat: live feed SSE, docker deploy, push notifications, calendar, onboarding
- SSE feed: /api/feed (5s polling, 5min TTL), /api/feed/events (REST fallback)
- useLiveFeed hook: auto-reconnect, deduplication, polling fallback
- FeedItem component: green/yellow/red color coding by delay
- Docker: nginx (SSL, gzip, SSE/streaming), updated docker-compose.yml
- nginx.conf: rate limiting, security headers, SSE unbuffered proxy
- deploy.sh: backup, migrate, build, health check, prune
- docs/deployment.md: full deployment guide
- web-push: push.service.ts (VAPID, stale sub cleanup)
- BullMQ reminder.job.ts: T+0/+10/+20 to patient, T+30 to relatives
- usePushNotifications hook + PushNotificationsToggle component
- /api/push/subscribe: POST/DELETE subscription management
- PushSubscription model added to schema.prisma
- CalendarView: monthly grid, green/yellow/red days, click to detail
- /api/calendar/:patientId: discipline stats, streaks, percentage
- /stats page for patient, calendar.test.ts (9 tests)
- OnboardingFlow: 4 slides, emoji backgrounds, skip button
- OnboardingGate: shows onboarding on first login (onboardingDone flag)
- markOnboardingDoneAction: sets profile.onboardingDone = true
- 43 tests pass: +10 feed + +9 calendar tests

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ducanh2912/next-pwa": "^10.2.9",
     "@prisma/adapter-pg": "^7.4.1",
     "@prisma/client": "^7.4.1",
+    "@types/web-push": "^3.6.4",
     "bcryptjs": "^3.0.3",
     "bullmq": "^5.70.0",
     "clsx": "^2.1.1",
@@ -40,6 +41,7 @@
     "prisma": "^7.4.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "web-push": "^3.6.7",
     "workbox-window": "^7.4.0",
     "zod": "^4.3.6"
   },
