--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,43 @@
-# Database
-DATABASE_URL="postgresql://memomed:password@localhost:5432/memomed_db"
+# =============================================
+# MemoMed AI — Переменные окружения
+# Скопируйте этот файл в .env и заполните значения
+# =============================================
 
-# Redis
-REDIS_URL="redis://localhost:6379"
+# --- База данных PostgreSQL ---
+DATABASE_URL=postgresql://memomed:your_password@localhost:5432/memomed_db
+POSTGRES_PASSWORD=your_secure_password
 
-# NextAuth.js
-NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_SECRET="your-super-secret-key-min-32-chars"
+# --- Redis ---
+REDIS_URL=redis://localhost:6379
 
-# DeepSeek API (OpenAI-compatible)
-DEEPSEEK_API_KEY="sk-..."
-DEEPSEEK_BASE_URL="https://api.deepseek.com/v1"
-DEEPSEEK_MODEL="deepseek-chat"
+# --- NextAuth.js ---
+# Генерация: openssl rand -base64 32
+NEXTAUTH_SECRET=your_nextauth_secret_min_32_chars
+NEXTAUTH_URL=https://your-domain.com
 
-# App
-NEXT_PUBLIC_APP_URL="http://localhost:3000"
-NODE_ENV="development"
+# --- DeepSeek AI ---
+DEEPSEEK_API_KEY=sk-your_deepseek_api_key
+DEEPSEEK_BASE_URL=https://api.deepseek.com/v1
+DEEPSEEK_MODEL=deepseek-chat
+
+# --- Web Push (VAPID) ---
+# Генерация: npx web-push generate-vapid-keys
+VAPID_PUBLIC_KEY=your_vapid_public_key
+VAPID_PRIVATE_KEY=your_vapid_private_key
+VAPID_EMAIL=mailto:admin@your-domain.com
+
+# --- Хранилище файлов (фото лекарств) ---
+# LOCAL — файлы в ./uploads (для разработки)
+# S3 — S3-совместимое хранилище
+STORAGE_TYPE=local
+UPLOAD_MAX_SIZE_MB=5
+
+# S3 настройки (если STORAGE_TYPE=s3)
+S3_ENDPOINT=https://s3.amazonaws.com
+S3_BUCKET=memomed-uploads
+S3_ACCESS_KEY=
+S3_SECRET_KEY=
+S3_REGION=eu-central-1
+
+# --- Приложение ---
+NODE_ENV=production
