--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,40 @@
-version: '3.8'
+# docker-compose.yml — production конфигурация MemoMed AI
+# Сервисы: nginx (reverse proxy), app (Next.js), worker (BullMQ), postgres, redis
 
 services:
+  # Nginx: SSL-терминация, gzip, reverse proxy
+  nginx:
+    image: nginx:1.25-alpine
+    ports:
+      - '80:80'
+      - '443:443'
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/ssl:/etc/nginx/ssl:ro
+      - nginx_logs:/var/log/nginx
+    depends_on:
+      app:
+        condition: service_healthy
+    restart: unless-stopped
+
+  # Next.js приложение
   app:
     build:
       context: .
       dockerfile: Dockerfile
-    ports:
-      - '3000:3000'
+    expose:
+      - '3000'
     environment:
-      DATABASE_URL: postgresql://memomed:${POSTGRES_PASSWORD:-password}@postgres:5432/memomed_db
+      DATABASE_URL: postgresql://memomed:${POSTGRES_PASSWORD:-changeme}@postgres:5432/memomed_db
       REDIS_URL: redis://redis:6379
-      NEXTAUTH_URL: ${NEXTAUTH_URL:-http://localhost:3000}
-      NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
-      DEEPSEEK_API_KEY: ${DEEPSEEK_API_KEY}
+      NEXTAUTH_URL: ${NEXTAUTH_URL:-http://localhost}
+      NEXTAUTH_SECRET: ${NEXTAUTH_SECRET:?NEXTAUTH_SECRET is required}
+      DEEPSEEK_API_KEY: ${DEEPSEEK_API_KEY:-}
       DEEPSEEK_BASE_URL: ${DEEPSEEK_BASE_URL:-https://api.deepseek.com/v1}
       DEEPSEEK_MODEL: ${DEEPSEEK_MODEL:-deepseek-chat}
+      VAPID_PUBLIC_KEY: ${VAPID_PUBLIC_KEY:-}
+      VAPID_PRIVATE_KEY: ${VAPID_PRIVATE_KEY:-}
+      VAPID_EMAIL: ${VAPID_EMAIL:-admin@memomed.app}
       NODE_ENV: production
     depends_on:
       postgres:
@@ -27,15 +47,20 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+      start_period: 40s
 
+  # BullMQ worker: напоминания, очистка чата, агрегация токенов
   worker:
     build:
       context: .
       dockerfile: Dockerfile.worker
     environment:
-      DATABASE_URL: postgresql://memomed:${POSTGRES_PASSWORD:-password}@postgres:5432/memomed_db
+      DATABASE_URL: postgresql://memomed:${POSTGRES_PASSWORD:-changeme}@postgres:5432/memomed_db
       REDIS_URL: redis://redis:6379
-      DEEPSEEK_API_KEY: ${DEEPSEEK_API_KEY}
+      DEEPSEEK_API_KEY: ${DEEPSEEK_API_KEY:-}
+      VAPID_PUBLIC_KEY: ${VAPID_PUBLIC_KEY:-}
+      VAPID_PRIVATE_KEY: ${VAPID_PRIVATE_KEY:-}
+      VAPID_EMAIL: ${VAPID_EMAIL:-admin@memomed.app}
       NODE_ENV: production
     depends_on:
       postgres:
@@ -44,16 +69,15 @@ services:
         condition: service_healthy
     restart: unless-stopped
 
+  # PostgreSQL 16
   postgres:
     image: postgres:16-alpine
     environment:
       POSTGRES_USER: memomed
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-password}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-changeme}
       POSTGRES_DB: memomed_db
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    ports:
-      - '5432:5432'
     restart: unless-stopped
     healthcheck:
       test: ['CMD-SHELL', 'pg_isready -U memomed -d memomed_db']
@@ -61,14 +85,13 @@ services:
       timeout: 5s
       retries: 5
 
+  # Redis 7 с persistence
   redis:
     image: redis:7-alpine
     volumes:
       - redis_data:/data
-    ports:
-      - '6379:6379'
     restart: unless-stopped
-    command: redis-server --appendonly yes
+    command: redis-server --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru
     healthcheck:
       test: ['CMD', 'redis-cli', 'ping']
       interval: 10s
@@ -78,3 +101,4 @@ services:
 volumes:
   postgres_data:
   redis_data:
+  nginx_logs:
