--- a/Dockerfile.worker
+++ b/Dockerfile.worker
@@ -5,7 +5,7 @@ RUN apk add --no-cache libc6-compat
 
 FROM base AS deps
 COPY package*.json ./
-RUN npm ci && npm cache clean --force
+RUN npm install && npm cache clean --force
 
 FROM deps AS runner
 ENV NODE_ENV=production
