--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
+    "@aws-sdk/client-s3": "^3.700.0",
     "@capacitor/android": "^8.1.0",
     "@capacitor/camera": "^8.0.1",
     "@capacitor/cli": "^7.5.0",
