fix: worker не падает при невалидных VAPID ключах

--- a/.env.example
+++ b/.env.example
@@ -55,5 +55,7 @@ NEXT_PUBLIC_UPLOAD_MAX_SIZE_MB=5
 
 # --- Приложение ---
 NODE_ENV=development
+# Режим отладки: dev-login доступен на сервере (true/false)
+ENABLE_DEV_LOGIN=false
 # При CI/CD задаётся автоматически:
 # COMMIT_SHA=abc1234
