fix: devLoginAction и ссылки dev-login учитывают ENABLE_DEV_LOGIN

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,8 @@ REDIS_URL=redis://localhost:6380
 # Генерация: openssl rand -base64 32
 NEXTAUTH_SECRET=your_nextauth_secret_min_32_chars
 NEXTAUTH_URL=http://localhost:3000
+# Для доступа по IP или за прокси (иначе UntrustedHost)
+AUTH_TRUST_HOST=true
 
 # --- DeepSeek AI ---
 DEEPSEEK_API_KEY=sk-your_deepseek_api_key
