--- a/docker-compose.standalone.yml
+++ b/docker-compose.standalone.yml
@@ -25,6 +25,7 @@ services:
       VAPID_EMAIL: ${VAPID_EMAIL:-admin@memomed.app}
       NODE_ENV: production
       ENABLE_DEV_LOGIN: ${ENABLE_DEV_LOGIN:-false}
+      AUTH_TRUST_HOST: 'true'
     depends_on:
       postgres:
         condition: service_healthy
